# forU

./: .gitignore  CMakeLists.txt
components/network/: CMakeLists.txt  captivePortal.c  dns_server.c  mqtt.c  otaImplementation.c  wifi.c
components/network/include/: captivePortal.h  dns_server.h  mqtt.h  otaImplementation.h  wifi.h
components/peripherals/: CMakeLists.txt  gpio_manager.c  gyroscope.c  oledScreen.c  u8g2_demo.c
components/peripherals/include/: gpio_manager.h  gyroscope.h  icons.h  oledScreen.h  u8g2_demo.h
components/services/: CMakeLists.txt  date.c  global_memory.c  nvs_manager.c  provisioning.c  root.html
components/services/include/: date.h  global_memory.h  nvs_manager.h  provisioning.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
